fixed ui issues

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         grid-template-columns: repeat(5, 1fr);
       }
       input#noOfBombs {
-        width: 100%;
         color: rgba(9, 24, 54, 0.8);
         font-weight: 600;
         -webkit-appearance: none;
@@ -72,7 +71,7 @@
     <div>
       <div class="wrapper">
         <div class="leftbar">
-          <p>Number of mines:</p>
+          <p>Number of mines: (Default 1)</p>
           <input type="text" name="usrname" id="noOfBombs" /> <br />
           <input type="submit" value="Submit" onclick="runGame()" /><br /><br />
 
